# modern-greek-inflexion

./: .gitignore  AUTHORS  LICENSE  README.md  Untitled.ipynb  __init__.py  create_adj_decl.py  create_adj_list.py  create_adv_decl.py  create_noun_decl.py  create_noun_list.py  create_pron_decl.py  create_pronoun_list.py  create_properN_list.py  create_quant_decl.py  create_quant_list.py  create_verb_con.py  create_verb_list.py  docs.rst  el_gr.py  exceptions.py  greek_tables.py  kata_pos_handler.py  requirements.txt  requirements_dev.txt  resources.py  setup.cfg  setup.py  stemmer.py  test.py  tox.ini
adjective/: adjective.py  adjective_full.py  create_adj_basic.py  create_adj_decl.py
adverb/: adverb.py
docs/: conf.py  index.rst  modern_greek_inflexion.adjective.rst  modern_greek_inflexion.adverb.rst  modern_greek_inflexion.articles.rst  modern_greek_inflexion.noun.rst  modern_greek_inflexion.numerals.rst  modern_greek_inflexion.pronoun.rst  modern_greek_inflexion.rst  modern_greek_inflexion.verb.rst  modules.rst  requirements.txt  usage.rst
modern_greek_inflexion/: exceptions.py  helping_functions.py  resources.py
noun/: create_noun_basic.py  create_noun_decl.py  noun.py
pronoun/: create_pron_basic.py  create_pron_decl.py
quantifiers/: create_quant_decl.py  create_quant_list.py  quantifiers.py
quantitative/: create_quant_decl.py  create_quant_list.py  quantifiers.py
src/: __init__.py  helping_functions.py
test/: __init__.py
unittests/: adj_tests.py  adverb_tests.py  articles_tests.py  noun_tests.py  numerals_tests.py  pronoun_tests.py  verb_tests.py  (+4 more)
(+177 files in other folders)
