[metadata]

name = modern-greek-inflexion
version = 0.4.5
description = Python 3 library for creating inflected forms given basic forms of Modern Greek words
long_description_content_type = text/markdown
long_description = file: README.md
license  = MIT
url = https://github.com/PicusZeus/modern-greek-inflexion
author = Krzysztof H
author_email = krzysztof.hilman@gmail.com
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = find:
include_package_data = False
package_dir=
    =src
zip_safe = no
python_requires = >= 3.1
setup_requires =
    setuptools
test_suite = test
install_requires =
    modern-greek-accentuation>=0.5
[options.extras_require]
testing =
    tox>=3.24
[options.package_data]
* = *.pickle
[options.packages.find]
where=src



